--- a/content/3_konzept/table/auswertung_tran_rot.tex
+++ b/content/3_konzept/table/auswertung_tran_rot.tex
@@ -7,11 +7,11 @@
 		\rowcolor{bfhblue}
 		\textcolor{white}{Messung} & \textcolor{white}{Absoluter Fehler} & \textcolor{white}{Relativer Fehler} & \textcolor{white}{Mittelwert}  & \textcolor{white}{Standardabweichung}\\
 		\hline
-		Auslenkung 1 & \unit[-348.02]{cm} & \unit[-6960.5]{\%} & \unit[-348.02]{cm} & \unit[76.39]{cm}\\
+		Auslenkung 1 & \unit[-348.02]{cm} & \unit[-6'960.5]{\%} & \unit[-348.02]{cm} & \unit[76.39]{cm}\\
 		\hline
-		Auslenkung 2 & \unit[-665.05]{cm} & \unit[-13301.0]{\%} & \unit[-665.05]{cm} & \unit[82.57]{cm} \\
+		Auslenkung 2 & \unit[-665.05]{cm} & \unit[-13'301.0]{\%} & \unit[-665.05]{cm} & \unit[82.57]{cm} \\
 		\hline
-		Auslenkung 3 & \unit[-1111.68]{cm} & \unit[-22233.5]{\%} & \unit[-11111.68]{cm} & \unit[179.45]{cm}\\
+		Auslenkung 3 & \unit[-1'111.68]{cm} & \unit[-22'233.5]{\%} & \unit[-1'111.68]{cm} & \unit[179.45]{cm}\\
 		\hline
      \end{tabularx}  
 \end{table}
