add text titelpage

--- a/titlepage/titlepage_info.tex
+++ b/titlepage/titlepage_info.tex
@@ -1,1 +1,1 @@
-Kurzes Abstract wenn gew\"unscht.
+Der Zeitpunkt des Wiedereinstieges in das Training ist f"ur einen Sportler mit Kreuzbandriss schwer zu bestimmen. Um den Genesungszustand des Athleten besser absch"atzen zu k"onnen, soll mit einem Beschleunigungssensor die Auslenkung des Knies gemessen werden. Diese Auslenkung l"asst auf die Stabilit"at und somit den Zustand des Kreuzbandes schliessen. Sie dient den Therapeuten als zus"atzliche Information um die Trainingsmöglichkeiten des Sportlers zusammenzustellen.
