--- a/content/3_konzept/konzept.tex
+++ b/content/3_konzept/konzept.tex
@@ -222,7 +222,7 @@ Die Wirkung dieser Rotation ist in Abbildung \vref{img:rotation_vektor} ersichtl
 \image{content/3_konzept/image/Rotation_Vektor}{scale=0.7}{htbp}[Rotation der Beschleunigungsdaten][img:rotation_vektor]
 %
 % Bewegungsdetektion
-\subsection{Bewegungsdetektion}
+\subsection{Bewegungsdetektion} \todo{auf offset eingehen}
 Da die Integration einer Aufsummierung entspricht kann durch einen kleinen Fehler in der Rotation resultierend durch einen Offset bereits ein grosser Drift entstehen. Ein Lösungsansatz ist dabei eine Bewegungsdetektion einzuführen. Die Integration wir nur durchgeführt, wenn sich der Sensor auch bewegt. Ein Hilfsmittel über die Variation eines Signals ist deren Varianz respektive Standardabweichung. Die Standardabweichung gibt uns Information über die Verteilung der Signalamplitude. Wird der Sensor in Ruhe gelassen, so ändern sich die aufgenommene Amplitude nur gering (Rauschen des Sensors laut NI \unit[3.9]{$mg_{rms}}$). Dementsprechend ist die Standardabweichung klein. Wird der Sensor bewegt, so resultiert eine grössere Änderung der Amplitude. Die Standardabweichung wird somit grösser.\par
 %
 Zu Beginn jeder Messung wird der Sensor für \unit[4]{s} in Ruhe gelassen. In dieser Zeit kann der Threshold mittels der Standardabweichung über diese Zeit bestimmt werden. Da in dieser Zeit über eine verhältnismässig grosse Zeitdauer gemessen wird ist die Standardabweichung geringer als mit der Methode wo ein Fenster über das Signal gefahren wird und in diesem Fenster die Standardabweichung bestimmt wird. Aus diesem Grund wird zur Berechnung des Thresholds noch zusätzlich ein Vorfaktor zur Standardabweichung multipliziert. Somit ist der Threshold grösser als die Standardabweichung des Rauschen. Dies ist sicherlich eine etwas unelegante Lösung und könnte noch verbessert werden. Jedoch wurde mit dieser Methode eine schnelle und einfache Lösung erzielt.\par
@@ -471,7 +471,7 @@ b_1 &= \frac{T_a}{2}
 	%
 	%
 	\subsection{Interpretation}
-		Bei allen Winkelmessungen der Testgruppe sind Abweichungen aufgetreten. Diese halten sich mit maximal \unit[2.28]{°} im Rahmen des Erwarteten. Es dabei zu berücksichtigen, dass die absolute Winkelmessung mit dem Winkelmesser M\low{2} eine relative hohe Ungenauigkeit von $\pm$\unit[1]{°} aufweist. Es könnte darum durchaus im Bereich des Möglichen liegen, dass die Kontrollgruppe hier die grössere Abweichungen von der Wirklichkeit hat als die Testgruppe. Die Messungen an sich weisen eine hohe Konstanz auf, was sich in den geringen Standardabweichungen widerspiegelt. Über den Erwartungen sind die Ergebnisse hinsichtlich der Rotation. Bei jeder Auslenkung konnte das \gls{g:bodyframe} erfolgreich und mit keinerlei Abweichung in das \gls{g:worldframe} rotiert werden.\par
+		Bei allen Winkelmessungen der Testgruppe sind Abweichungen aufgetreten. Diese halten sich mit maximal \unit[2.28]{°} im Rahmen des Erwarteten. Es ist dabei zu berücksichtigen, dass die absolute Winkelmessung mit dem Winkelmesser M\low{2} eine relative hohe Ungenauigkeit von $\pm$\unit[1]{°} aufweist. Es könnte darum durchaus im Bereich des Möglichen liegen, dass die Kontrollgruppe hier die grössere Abweichungen von der Wirklichkeit hat als die Testgruppe. Die Messungen an sich weisen eine hohe Konstanz auf, was sich in den geringen Standardabweichungen widerspiegelt. Über den Erwartungen sind die Ergebnisse hinsichtlich der Rotation. Bei jeder Auslenkung konnte das \gls{g:bodyframe} erfolgreich und mit keinerlei Abweichung in das \gls{g:worldframe} rotiert werden.\par
 		%
 		In Anbetracht der Auswertung kann damit die Hypothese \vref{hypo:rotation} vollumfänglich bestätigt werden. Mit dem Erfüllen des ersten Protokolls ist zugleich das Fundament für folgenden Bestandteilen des Konzepts gelegt.
 %
@@ -659,7 +659,14 @@ b_1 &= \frac{T_a}{2}
 			\input{content/3_konzept/table/auswertung_tran}	 
 	%
 	%
-	\subsection{Interpretation}\label{ss:interpretation_tran}\todo{Histogramm, Gruppenvergleich,Messfehler}
+	\subsection{Interpretation}\label{ss:interpretation_tran}
+	
+	\todo{Auf Ergenis eingehen der einzelnen drei Achsen was wurde gemessen? -> Fehler der Testgruppe, anschliessend als gesamtes Ergebnis Betrachten darauf eingehen}
+	\todo{Begründung allgemeiner Fehler -> Kontrollgruppe genau? nein da 5cm von "Hand" gefahren}
+	\todo{bekannte Fehler zurückbringen auf Kontrollgruppe, Fehler auf Testgruppe oder Kontrollgruppe?}
+	\todo{eingehen auf Geschwindigkeiten, Position des Sensors (warum y-achse schlecht)}
+	\todo{Abschluss: Brauchbar? Auf Hypothese 2 verweisen, Bestätigt oder Widerlegt?}
+	
 %
 %
 %Verifikation Translation und Rotation überlagert
@@ -780,6 +787,12 @@ b_1 &= \frac{T_a}{2}
 	%
 	%
 	\subsection{Interpretation}\label{ss:interpretation_tran_rot}\todo{Histogramm, Gruppenvergleich,Messfehler}
+
+todo{Auf Ergenis eingehen der einzelnen drei Achsen was wurde gemessen? -> Fehler der Testgruppe, anschliessend als gesamtes Ergebnis Betrachten darauf eingehen}
+	\todo{Begründung allgemeiner Fehler -> Kontrollgruppe genau? nein da 5cm von "Hand" gefahren}
+	\todo{bekannte Fehler zurückbringen auf Kontrollgruppe, Fehler auf Testgruppe oder Kontrollgruppe?}
+	\todo{eingehen auf Geschwindigkeiten, Position des Sensors (warum y-achse schlecht)}
+	\todo{Abschluss: Brauchbar? Auf Hypothese 2 verweisen, Bestätigt oder Widerlegt?}
 %
 %
 %Validierung
