Iterpretation translation is done

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -316,3 +316,16 @@
   year = {2013},
   keywords = {lit},
 }
+
+@ARTICLE{lit:drift_int,
+  title = {Drift-Free Position Estimation of Periodic or Quasi-Periodic
+Motion Using Inertial Sensors},
+  publisher = {sensors Open Access Journals},
+  journal = {sensors Open Access Journals},
+  year = {2011},
+  author = {Win Tun Latt and Kalyana Chakravarthy Veluvolu and Wei Tech Ang},
+  edition = {},
+  month = {05},
+  ISSN = {1424-8220},
+  keywords = {lit},
+}
